--- a/src/app/main-components/navbar/navbar.component.html
+++ b/src/app/main-components/navbar/navbar.component.html
@@ -14,7 +14,7 @@
         [attr.aria-expanded]="!isMenuCollapsed"
         aria-label="Toggle navigation"
       >
-        <span class="text-blu">MENU</span>
+        <span class="text-blu fw-bold">MENU</span>
       </button>
 
       <div
