--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -1,10 +1,10 @@
 <div class="container">
-  <div class="row mt-5">
-    <div class="col-10 col-md-6 col-lg-5 mx-auto mt-auto">
+  <div class="row">
+    <div class="col-10 col-md-6 col-lg-5 mx-auto mt-5">
       <div class="d-flex flex-column align-items-center">
-        <h1 class="mb-5">
-          ...do you remember when you wanted to be an ASTRONAUT?
-        </h1>
+        <h2 class="mb-5 text-center fw-light">
+          Do you remember when you wanted to be an Astronaut?
+        </h2>
         <img src="pexels-amina-filkins-5561457.png" alt="" />
       </div>
     </div>
@@ -13,11 +13,40 @@
     >
       <img src="pexels-amina-filkins-5561459.png" alt="" />
     </div>
-    <div class="col-10 col-md-6">
-      <img src="pexels-mart-production-8471955-Photoroom.png" alt="" />
+    <div class="col-10 col-md-12 mt-5 mx-auto text-center">
+      <div class="d-flex flex-column align-items-center">
+        <h2 class="text-center fw-light mb-3">...a Scientist?</h2>
+        <img src="pexels-mart-production-8471835-Photoroom.png" alt="" />
+      </div>
     </div>
-    <div class="col-10 col-md-6">
-      <img src="pexels-cottonbro-9656476-Photoroom.png" alt="" />
+    <div class="col-10 col-md-6 mt-5 mx-auto text-center">
+      <div class="d-flex flex-column align-items-center">
+        <h4 class="fw-light">
+          ...whatever it was, come and discover
+          <h1 class="fw-light d-inline">How To Start</h1>
+          your professional journey!
+        </h4>
+      </div>
+    </div>
+    <div class="col-10 col-md-6 text-center mt-5 mx-auto text-center">
+      <div class="d-flex flex-column align-items-center">
+        <h4 class="fw-light">Register as</h4>
+        <div class="d-flex align-items-center justify-content-between">
+          <button
+            class="custom-button mt-2 mb-3 me-2 border-blu"
+            routerLink="/auth/registerStudent"
+          >
+            <span class="text-blu fs-6"> Student </span>
+          </button>
+          <h4 class="fw-light">or</h4>
+          <button
+            class="custom-button button-large mt-2 mb-3 ms-2 border-blu"
+            routerLink="/auth/registerProfessional"
+          >
+            <span class="text-blu fs-6"> Professional </span>
+          </button>
+        </div>
+      </div>
     </div>
   </div>
 </div>
