--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -74,7 +74,7 @@
 
 <div
   *ngIf="toastMessage"
-  class="toast-container position-fixed top-50 start-50 translate-middle"
+  class="toast-container shadow-lg position-fixed top-0 end-0 m-3"
 >
   <div
     class="toast show rounded-0 border-0"
