--- a/src/app/auth/register-professional/register-professional.component.html
+++ b/src/app/auth/register-professional/register-professional.component.html
@@ -306,7 +306,7 @@
 
 <div
   *ngIf="toastMessage"
-  class="toast-container position-fixed top-50 start-50 translate-middle p-3"
+  class="toast-container shadow-lg position-fixed top-0 end-0 m-3"
 >
   <div
     class="toast show rounded-0"
