--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,10 +1,10 @@
 <div class="card">
-  <div class="card-header">Featured</div>
+  <div class="card-header">{{ professional.profession.name }}</div>
   <div class="card-body">
-    <h5 class="card-title">Special title treatment</h5>
-    <p class="card-text">
-      With supporting text below as a natural lead-in to additional content.
-    </p>
+    <h5 class="card-title">
+      {{ professional.appUser.name }} {{ professional.appUser.surname }}
+    </h5>
+    <p class="card-text">Suca</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
