student dashboard wip

--- a/src/app/main-components/footer/footer.component.html
+++ b/src/app/main-components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mt-5">
+<div class="container-fluid">
   <footer
     class="d-flex border-top py-2 border-blu border-2 justify-content-between mx-sm-3 bg-background align-items-center justify-content-start"
   >
