--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <form [formGroup]="form" (ngSubmit)="onFilter()">
-    <div class="row mt-5">
+    <div class="row">
       <div
         class="col-12 col-md-6 col-lg-3 d-flex justify-content-center justify-content-lg-start mt-3"
       >
