--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -19,7 +19,8 @@
         <img src="pexels-mart-production-8471835-Photoroom.png" alt="" />
       </div>
     </div>
-    <div class="col-10 col-md-6 mt-5 mx-auto text-center">
+
+    <div class="col-10 col-md-6 my-5 mx-auto text-center">
       <div class="d-flex flex-column align-items-center">
         <h4 class="fw-light">
           ...whatever it was, come and discover
@@ -28,7 +29,7 @@
         </h4>
       </div>
     </div>
-    <div class="col-10 col-md-6 text-center mt-5 mx-auto text-center">
+    <div class="col-10 col-md-6 text-center my-5 mx-auto text-center">
       <div class="d-flex flex-column align-items-center">
         <h4 class="fw-light">Register as</h4>
         <div class="d-flex align-items-center justify-content-between">
