--- a/src/app/pages/student-dashboard/student-dashboard.component.html
+++ b/src/app/pages/student-dashboard/student-dashboard.component.html
@@ -1,1 +1,217 @@
-<p>student-dashboard works!</p>
+<div class="container">
+  <div class="row">
+    <div *ngIf="!editingPhoto" class="col-10 col-md-4 mx-auto">
+      <div class="d-flex img-container">
+        <div class="text-center">
+          <img [src]="student.profilePicture" alt="Profile Picture" />
+        </div>
+        <div *ngIf="!editingPhoto">
+          <button
+            class="border-0 bg-background rounded-0"
+            (click)="editingPhoto = true"
+          >
+            <i class="bi bi-file-image text-blu"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <div *ngIf="editingPhoto" class="col-10 col-md-4 mx-auto my-auto">
+      <div class="d-flex flex-column">
+        <div class="d-flex flex-column my-3 mx-auto">
+          <div class="d-flex align-items-center">
+            <label for="profilePicture" class="form-lable me-3"
+              >Profile Picture</label
+            >
+            <input
+              id="profilePicture"
+              type="file"
+              (change)="onFileSelected($event)"
+              class="hidden-input"
+            />
+            <button class="custom-button border-blu">
+              <label class="text-blu" for="profilePicture">Choose it</label>
+            </button>
+          </div>
+          <span *ngIf="fileName">{{ fileName }}</span>
+        </div>
+        <div class="d-flex mt-3 mx-auto">
+          <button (click)="savePhoto()" class="custom-button border-blu me-3">
+            <span class="text-blu">Save Photo</span>
+          </button>
+          <button (click)="cancelPhotoEdit()" class="custom-button border-blu">
+            <span class="text-blu">Cancel</span>
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <div
+      class="col-10 col-md-4 mt-5 d-flex flex-column justify-content-start mx-auto"
+    >
+      <div *ngIf="!editingDetails">
+        <div class="d-flex flex-column justify-content-center mb-2">
+          <h6>NAME &nbsp;</h6>
+          <h6 class="fw-light">{{ student.name }}</h6>
+        </div>
+        <div class="d-flex flex-column justify-content-center mb-2">
+          <h6>SURNAME &nbsp;</h6>
+          <h6 class="fw-light">{{ student.surname }}</h6>
+        </div>
+        <div class="d-flex flex-column justify-content-center mb-2">
+          <h6>E-MAIL &nbsp;</h6>
+          <h6 class="fw-light">{{ student.email }}</h6>
+        </div>
+        <div class="d-flex flex-column justify-content-center mb-2">
+          <h6>DATE OF BIRTH &nbsp;</h6>
+          <h6 class="fw-light">{{ student.dateOfBirth }}</h6>
+        </div>
+        <div class="d-flex flex-column justify-content-center mb-2">
+          <h6>USERNAME &nbsp;</h6>
+          <h6 class="fw-light">{{ student.username }}</h6>
+        </div>
+
+        <button
+          (click)="editingDetails = true"
+          class="custom-button border-blu"
+        >
+          <span class="text-blu">Edit</span>
+        </button>
+      </div>
+
+      <div *ngIf="editingDetails">
+        <form [formGroup]="detailsForm" (ngSubmit)="saveDetails()">
+          <div class="input-wrapper mb-3">
+            <input
+              id="name"
+              formControlName="name"
+              type="text"
+              placeholder="Your Name"
+              class="input-box"
+            />
+          </div>
+          <div class="input-wrapper mb-3">
+            <input
+              id="surname"
+              formControlName="surname"
+              type="text"
+              placeholder="Your Surname"
+              class="input-box"
+            />
+          </div>
+          <div class="input-wrapper mb-3">
+            <label for="dateOfBirth" class="form-label"
+              >Your Date of Birth</label
+            >
+            <input
+              id="dateOfBirth"
+              formControlName="dateOfBirth"
+              type="date"
+              class="input-box"
+            />
+          </div>
+          <div class="input-wrapper mb-3">
+            <input
+              id="email"
+              formControlName="email"
+              type="email"
+              placeholder="Your E-mail"
+              class="input-box"
+            />
+          </div>
+          <div class="input-wrapper mb-3">
+            <input
+              id="username"
+              formControlName="username"
+              type="text"
+              placeholder="Your Username"
+              class="input-box"
+            />
+          </div>
+          <div class="input-wrapper mb-3">
+            <input
+              id="password"
+              formControlName="password"
+              type="password"
+              placeholder="Your Password"
+              class="input-box"
+            />
+          </div>
+          <div class="d-flex justify-content-center">
+            <button type="submit" class="custom-button border-blu me-2">
+              <span class="text-blu">Save</span>
+            </button>
+            <button
+              type="button"
+              (click)="cancelDetailsEdit()"
+              class="custom-button border-blu"
+            >
+              <span class="text-blu">Cancel</span>
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <div
+      class="col-10 col-md-4 mt-5 d-flex flex-column justify-content-start mx-auto"
+    >
+      <div *ngIf="!editingSectorsOfInterest" class="d-flex flex-column mb-3">
+        <h6>SECTORS OF INTEREST &nbsp;</h6>
+        <h6 class="fw-light" *ngFor="let interest of sectorsOfInterest">
+          {{ interest.name }}&nbsp;
+        </h6>
+
+        <button
+          (click)="editingSectorsOfInterest = true"
+          class="custom-button border-blu"
+        >
+          <span class="text-blu">Edit </span>
+        </button>
+      </div>
+
+      <div *ngIf="editingSectorsOfInterest">
+        <form
+          [formGroup]="sectorsOfInterestForm"
+          (ngSubmit)="saveSectorsOfInterest()"
+        >
+          <div class="input-wrapper mb-3">
+            <select
+              class="input-box bg-background"
+              (change)="onSectorSelected($event)"
+            >
+              <option value="">Select Your Interests</option>
+              <option *ngFor="let sector of sectorsList" [value]="sector.id">
+                {{ sector.name }}
+              </option>
+            </select>
+          </div>
+          <div class="my-2 d-flex justify-content-center flex-wrap">
+            <ng-container *ngFor="let sectorId of selectedSectors">
+              <span class="badge text-blu bg-verde me-2 mt-2 pb-2">
+                {{ getSectorNameById(sectorId) }}
+                <button
+                  type="button"
+                  class="btn-close btn-close-dark btn-sm ms-1"
+                  (click)="removeSector(sectorId)"
+                ></button>
+              </span>
+            </ng-container>
+          </div>
+          <div class="d-flex justify-content-center">
+            <button type="submit" class="custom-button border-blu me-2">
+              <span class="text-blu">Save Interests</span>
+            </button>
+            <button
+              type="button"
+              (click)="cancelSectorsEdit()"
+              class="custom-button border-blu"
+            >
+              <span class="text-blu">Cancel</span>
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
