--- a/src/app/pages/student-dashboard/student-dashboard.component.scss
+++ b/src/app/pages/student-dashboard/student-dashboard.component.scss
@@ -1,4 +1,4 @@
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
   img {
     max-width: 350px;
     bottom: 0;
@@ -23,8 +23,8 @@
   }
 }
 
-@media (max-width: 996px) {
+@media (max-width: 768px) {
   img {
     max-width: 250px;
   }
-}
+} */
